[gd_scene load_steps=6 format=3 uid="uid://dohdujc4la7ip"]

[ext_resource type="Script" path="res://scene/help/help_screen.gd" id="1_mknvg"]
[ext_resource type="Theme" uid="uid://bkqmmahujknn0" path="res://resource/default_theme.tres" id="1_y5i0q"]
[ext_resource type="Script" path="res://scene/help/keybinding_label.gd" id="2_wg2yu"]
[ext_resource type="Script" path="res://scene/help/general_label.gd" id="3_c6ibq"]
[ext_resource type="Script" path="res://scene/help/gameplay_label.gd" id="4_8t43f"]

[node name="HelpScreen" type="MarginContainer"]
offset_right = 800.0
offset_bottom = 600.0
theme = ExtResource("1_y5i0q")
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
script = ExtResource("1_mknvg")

[node name="KeybindingScroll" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="KeybindingLabel" type="Label" parent="KeybindingScroll"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap_mode = 3
script = ExtResource("2_wg2yu")

[node name="GeneralScroll" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="GeneralLabel" type="Label" parent="GeneralScroll"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap_mode = 3
script = ExtResource("3_c6ibq")

[node name="GameplayScroll" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="GameplayLabel" type="Label" parent="GameplayScroll"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap_mode = 3
script = ExtResource("4_8t43f")
